https://github.com/Hesim97/Xeber.git

--- a/Xeber/Resources/Views/News/Index.en.resx
+++ b/Xeber/Resources/Views/News/Index.en.resx
@@ -132,6 +132,9 @@
   <data name="Kriminal" xml:space="preserve">
     <value>Criminal</value>
   </data>
+  <data name="Virtual karabakhyuxarı Birinci Qarabağ müharibəsinin əsasını qoyan təxribatlardan 32 il ötür" xml:space="preserve">
+    <value>Virtual caramel top 32 years have passed since the founding of the first Karabakh war</value>
+  </data>
   <data name="İdman" xml:space="preserve">
     <value>Suports</value>
   </data>
