--- a/Xeber/Resources/Views/Shared/_Layout.en.resx
+++ b/Xeber/Resources/Views/Shared/_Layout.en.resx
@@ -120,6 +120,9 @@
   <data name="Baş Səhifə" xml:space="preserve">
     <value>Home</value>
   </data>
+  <data name="Virtual karabakhyuxarı Birinci Qarabağ müharibəsinin əsasını qoyan təxribatlardan 32 il ötür" xml:space="preserve">
+    <value>Virtual caramel top 32 years have passed since the founding of the first Karabakh war</value>
+  </data>
   <data name="Xəbərlər" xml:space="preserve">
     <value>News</value>
   </data>
