https://github.com/Hesim97/Xeber.git

--- a/Xeber/Resources/Views/News/Details.ru.resx
+++ b/Xeber/Resources/Views/News/Details.ru.resx
@@ -117,11 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Ermənistan silahlı qüvvələrinin bölmələri ilə əlaqəli hava limanlarının ilişib qalması ilə 22 dəfə pozub.&#xD;&#xA;Göyarx, Çiləbürt, Ağdam rayonu Cəvahirli, Yusifcanlı, Xocavənd rayonunun Kuropatkino, Füzuli rayonu Horadiz, Cəbrayıl rayonunun Nüzgar kəndləri yaxınlığı, Goranboy və Tərtər rayonları arasında ən yaxşı reklamlar təqdim olunur." xml:space="preserve">
-    <value>Armenia has violated airports associated with units of the Armed Forces 22 times due to overheating.
-The best advertising between Goyarkh, Chilaburt, Javahirli, Aghdam district, Yusifcanli, Kuropatkino of Khojavend district, Horadiz of Fuzuli district, Nuzgar village of Jabrayil region, and best advertising between Goranboy and Tartar regions.</value>
-  </data>
   <data name="tarixində əlavə edildi" xml:space="preserve">
-    <value>added on</value>
+    <value>добавлено</value>
   </data>
 </root>
